banner z-index issue fixes

--- a/web/themes/custom/maam/scss/components/_hero-banner.scss
+++ b/web/themes/custom/maam/scss/components/_hero-banner.scss
@@ -4,7 +4,7 @@
     padding-bottom: 18%;
     position: relative;
     background-image: url(/themes/custom/maam/images/banner-hero.png);
-    z-index: -1;
+    // z-index: -1;
     .row {
       align-items: center;
     }
